tests/error/hello2-1.nx
/* Hello-world with function */
fun hello(param: string) = print("Hello, World!\n")
fun to_string(integer: int): string = "42"
fun odd(integer: int): int =
    if integer = 1 then
        1
    else
        even (integer - 1)
fun even(integer: int): int =
    if integer = 0 then
        1
    else
        odd (integer - 1)
fun fib(integer: int): int =
    if integer = 0 then
        1
    else if integer = 1 then
        1
    else
        fib (integer - 1) + fib (integer - 2)
typealias list = list {
    first: int,
    rest: list
}
typealias a = b
typealias b = c
typealias c = int
fun to_string2(integer: int): string = integer
fun to_string3(integer: unexisting): string = "42"
fun to_string4(integer: int): unexisting = "42"
fun hello2(param: string, param: int) = print("Hello, World!\n")
var string: string = "hello"
typealias myStruct = myStruct {
    myNum: int
}
typealias myStruct2 = myStruct2 {
    myNum: unexisting
}
typealias intArray2 = [unexisting; 10]
var struct: myStruct = nil
typealias x1 = y1
typealias y1 = z1
typealias z1 = x1
typealias x = y
typealias y = z
typealias z = z { field: x }
var struct2 = nil
var string2: string = nil
var string2: unexisting = 42
var string2: string = 42

typealias intArray = [int; 40]
typealias MyStruct = MyStruct { myField: int, secondField: int }

fun main() = (
    hello();
    var value = 42;
    var arrayOfInt = [10; 42];
    var arrayOfString = ["hello"; 10];
    var arrayOfString = ["test"; 42];
    var none = value = 10;
    var none2 = value = "test";
    var struct = MyStruct
        { myField = 10
        , secondField = 42
        };
    var struct2 = int
        { myField = 10
        , secondField = 42
        };
    var struct2 = MyStruct
        { myField = 10
        , secondField = 42
        , secondField2 = 42
        };
    var struct2 = MyStruct
        { myField = 10
        };
    var struct2 = MyStruct
        { myField = "10"
        , secondField = 42
        };
    var struct2 = MyStruct2
        { myField = 10
        , secondField = 42
        };
    arrayOfInt[0] = 42;
    string[0] = 42;
    arrayOfInt["0"] = 42;
    arrayOfInt[0] = "42";
    struct.myField = 42;
    struct.myField2 = 42;
    struct.myField = "42";
    print("42");
    print("string");
    print("test");
    string = "10";
    break;
    for i = "test" to 10 do
        print(to_string(i));
    for i = 0 to "test" do
        print(to_string(i));
    while "10" do
        print(to_string(10));
    while 10 do
        print(to_string(10));
    for i = 0 to 10 do (
        print(to_string(i));
        fun hello2(param: string) = (
            print("Hello, World!\n");
            break
        );
        break
    );
    print(value);
    print(param)
)
